Fixing spacing issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,12 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+.page-spacing {
+    margin-top: 20px;
+}
+
+
  :root {
     --blue: #4e73df;
     --indigo: #6610f2;
